# qmlplayground

./: .gitignore  CMakeLists.txt  README.md  build.sh  qmlruntime.js
cmake/: patch_esm.cmake
examples/: animation.qml  bargraph.qml  controls.qml  cube3d.qml  hello.qml  index.json  linegraph.qml  mousearea.qml  particles.qml  sphere3d.qml
exceptions/: qmlruntime_wasm.js  qtloader.js
shared/: qmlruntime_wasm.wasm
shared/qt/: lib  plugins  qml
shared/qt/lib/: libQt6Concurrent.prl  libQt6Core.prl  libQt6Graphs.prl  libQt6GraphsWidgets.prl  libQt6Gui.prl  libQt6Help.prl  libQt6JsonRpc.prl  libQt6LabsAnimation.prl  libQt6LabsFolderListModel.prl  libQt6LabsPlatform.prl  libQt6LabsQmlModels.prl  libQt6LabsSettings.prl  libQt6LabsStyleKit.prl  libQt6LabsStyleKitImpl.prl  libQt6LabsSynchronizer.prl  libQt6LabsWavefrontMesh.prl  libQt6LanguageServer.prl  libQt6Multimedia.prl  libQt6MultimediaQuick.prl  libQt6MultimediaTestLib.prl  libQt6MultimediaWidgets.prl  libQt6Network.prl  libQt6OpenGL.prl  libQt6OpenGLWidgets.prl  libQt6Positioning.prl  libQt6PositioningQuick.prl  libQt6PrintSupport.prl  libQt6Qml.prl  libQt6QmlCompiler.prl  libQt6QmlCore.prl  libQt6QmlDom.prl  libQt6QmlFormat.prl  libQt6QmlLocalStorage.prl  libQt6QmlMeta.prl  libQt6QmlModels.prl  libQt6QmlNetwork.prl  libQt6QmlToolingSettings.prl  libQt6QmlTypeRegistrar.prl  libQt6QmlXmlListModel.prl  libQt6Quick.prl  (+55 more)
shared/qt/lib/cmake/Qt6/: FindFFmpeg.cmake  FindWrapBundledOpenXRConfigExtra.cmake  Qt6Config.cmake  Qt6ConfigExtras.cmake  Qt6ConfigVersion.cmake  Qt6Dependencies.cmake  Qt6Targets.cmake  Qt6TargetsPrecheck.cmake  Qt6VersionlessAliasTargets.cmake  Qt6VersionlessTargets.cmake  QtBuildHelpers.cmake  QtBuildPathsHelpers.cmake  QtBuildRepoExamplesHelpers.cmake  QtBuildRepoHelpers.cmake  QtInstallPaths.cmake  QtModuleHelpers.cmake  QtPublicAppleHelpers.cmake  QtPublicSbomCommonGenerationHelpers.cmake  QtPublicSbomDepHelpers.cmake  QtPublicSbomQtEntityHelpers.cmake  QtPublicWindowsHelpers.cmake  QtTestHelpers.cmake  QtToolHelpers.cmake  qt.toolchain.cmake
shared/qt/lib/cmake/Qt6BuildInternals/: Qt6BuildInternalsConfigVersion.cmake  QtBuildInternalsExtra.cmake
shared/qt/lib/cmake/Qt6BundledFreetype/: Qt6BundledFreetypeConfig.cmake  Qt6BundledFreetypeConfigVersion.cmake  Qt6BundledFreetypeDependencies.cmake  Qt6BundledFreetypeTargets.cmake  Qt6BundledFreetypeTargetsPrecheck.cmake  Qt6BundledFreetypeVersionlessAliasTargets.cmake  Qt6BundledFreetypeVersionlessTargets.cmake
shared/qt/lib/cmake/Qt6BundledLibjpeg/: Qt6BundledLibjpegConfig.cmake  Qt6BundledLibjpegConfigVersion.cmake  Qt6BundledLibjpegTargets.cmake  Qt6BundledLibjpegTargetsPrecheck.cmake  Qt6BundledLibjpegVersionlessAliasTargets.cmake  Qt6BundledLibjpegVersionlessTargets.cmake
shared/qt/lib/cmake/Qt6BundledLibpng/: Qt6BundledLibpngConfig.cmake  Qt6BundledLibpngConfigVersion.cmake  Qt6BundledLibpngDependencies.cmake  Qt6BundledLibpngTargets.cmake  Qt6BundledLibpngTargetsPrecheck.cmake  Qt6BundledLibpngVersionlessAliasTargets.cmake  Qt6BundledLibpngVersionlessTargets.cmake
shared/qt/lib/cmake/Qt6BundledResonanceAudio/: Qt6BundledResonanceAudioConfig.cmake  Qt6BundledResonanceAudioConfigVersion.cmake  Qt6BundledResonanceAudioTargets.cmake  Qt6BundledResonanceAudioTargetsPrecheck.cmake  Qt6BundledResonanceAudioVersionlessAliasTargets.cmake  Qt6BundledResonanceAudioVersionlessTargets.cmake
shared/qt/lib/cmake/Qt6BundledTLSF/: Qt6BundledTLSFDependencies.cmake
shared/qt/lib/cmake/Qt6Bundled_Clip2Tri/: Qt6Bundled_Clip2TriDependencies.cmake
shared/qt/lib/cmake/Qt6Concurrent/: Qt6ConcurrentAdditionalTargetInfo.cmake  Qt6ConcurrentConfig.cmake  Qt6ConcurrentConfigVersion.cmake  Qt6ConcurrentDependencies.cmake  Qt6ConcurrentTargets.cmake  Qt6ConcurrentTargetsPrecheck.cmake  Qt6ConcurrentVersionlessAliasTargets.cmake  Qt6ConcurrentVersionlessTargets.cmake
shared/qt/lib/cmake/Qt6Core/: Qt6CoreAdditionalTargetInfo.cmake  Qt6CoreConfig.cmake  Qt6CoreConfigExtras.cmake  Qt6CoreConfigVersion.cmake  Qt6CoreDependencies.cmake  Qt6CoreMacros.cmake  Qt6CoreResourceInit.in.cpp  Qt6CoreTargets.cmake  Qt6CoreTargetsPrecheck.cmake  Qt6CoreVersionlessAliasTargets.cmake  Qt6CoreVersionlessTargets.cmake  Qt6WasmMacros.cmake
shared/qt/lib/cmake/Qt6CorePrivate/: Qt6CorePrivateConfig.cmake  Qt6CorePrivateConfigVersion.cmake  (+5 more)
shared/qt/lib/pkgconfig/: Qt6Concurrent.pc  Qt6Core.pc  Qt6Graphs.pc  Qt6GraphsWidgets.pc  Qt6Gui.pc  Qt6Help.pc  Qt6LabsAnimation.pc  Qt6LabsFolderListModel.pc  Qt6LabsPlatform.pc  Qt6LabsQmlModels.pc  Qt6LabsSettings.pc  Qt6LabsStyleKit.pc  Qt6LabsStyleKitImpl.pc  Qt6LabsSynchronizer.pc  Qt6LabsWavefrontMesh.pc  Qt6Linguist.pc  Qt6Multimedia.pc  Qt6MultimediaWidgets.pc  Qt6Network.pc  Qt6OpenGL.pc  Qt6OpenGLWidgets.pc  Qt6Platform.pc  Qt6Positioning.pc  Qt6PositioningQuick.pc  Qt6PrintSupport.pc  Qt6Qml.pc  Qt6QmlCompiler.pc  Qt6QmlCore.pc  Qt6QmlIntegration.pc  Qt6QmlLocalStorage.pc  Qt6QmlMeta.pc  Qt6QmlModels.pc  Qt6QmlNetwork.pc  Qt6QmlXmlListModel.pc  Qt6Quick.pc  Qt6Quick3D.pc  Qt6Quick3DAssetImport.pc  Qt6Quick3DAssetUtils.pc  Qt6Quick3DEffects.pc  Qt6Quick3DHelpers.pc  (+215 more)
shared/qt/qml/: builtins.qmltypes  jsroot.qmltypes
shared/qt/qml/QML/: Qml_qml_module_dir_map.qrc
shared/qt/qml/QtCore/: QmlCore_qml_module_dir_map.qrc
shared/qt/qml/QtGraphs/: Graphs_qml_module_dir_map.qrc
shared/qt/qml/QtMultimedia/: MultimediaQuickPrivate_qml_module_dir_map.qrc
shared/qt/qml/QtNetwork/: QmlNetwork_qml_module_dir_map.qrc  plugins.qmltypes
shared/qt/qml/QtPositioning/: PositioningQuick_qml_module_dir_map.qrc
shared/qt/qml/QtQml/: QmlMeta_qml_module_dir_map.qrc  qmldir
shared/qt/qml/QtQuick/: Quick_qml_module_dir_map.qrc  plugins.qmltypes
shared/qt/qml/QtQuick3D/: Quick3D_qml_module_dir_map.qrc
shared/qt/qml/QtTest/: QuickTest_qml_module_dir_map.qrc
shared/qt/qml/QtWebSockets/: qmlwebsockets_qml_module_dir_map.qrc
shared/qt/qml/QtWebView/: WebViewQuick_qml_module_dir_map.qrc  qmldir
src/: imports.qml  index.html  main.cpp  qmlplayground.js  qmlruntime.cpp  qmlruntime.h  qmlruntime.js  qt_plugins.json
static/: qmlruntime_wasm.js
(+1774 files in other folders)
